@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vcprop="clr-namespace:Virtual_Crosshair.Properties"
-        Title="Settings" Height="250" Width="325" MinHeight="200" MinWidth="325" Closing="Window_Closing">
+        Title="Settings" Height="300" Width="325" MinHeight="200" MinWidth="325" Closing="Window_Closing">
     <Grid>
         <Slider x:Name="HorizontalOffsetCtl" Value="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=HorizontalOffset}" IsSnapToTickEnabled="True" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="39,10,10,0" Minimum="-20" Maximum="20" ValueChanged="HorizontalOffsetCtl_ValueChanged" TickPlacement="BottomRight" SmallChange="1" AutoToolTipPlacement="TopLeft"/>
         <Slider x:Name="VerticalOffsetCtl" Value="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=VerticalOffset}" IsSnapToTickEnabled="True" HorizontalAlignment="Left" Margin="15,39,0,13" VerticalAlignment="Stretch" Orientation="Vertical" Minimum="-20" Maximum="20" ValueChanged="VerticalOffsetCtl_ValueChanged" SmallChange="1" TickPlacement="BottomRight" AutoToolTipPlacement="TopLeft"/>
@@ -34,5 +34,6 @@
             <ComboBoxItem Content="500"/>
             <ComboBoxItem Content="1000"/>
         </ComboBox>
+        <Label x:Name="lblWorkAreaInfo" Content="(WorkArea)" HorizontalAlignment="Right" Margin="0,229,35,0" VerticalAlignment="Top" Width="169" RenderTransformOrigin="0.682,2.423"/>
     </Grid>
 </Window>
